--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;,900;1,300;1,400;1,500;1,600;&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>portfolio</title>
   </head>
@@ -21,6 +28,7 @@
       <h1 class="branding">Ignacio</h1>
       <nav>
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
+          <i id="exit-hamburger" class="fas fa-times"></i>
           <li>
             <a href="./index.html">Home</a>
           </li>
@@ -40,16 +48,14 @@
     <div class="header-container">
       <div class="introduction-to-my-page">
         <div class="wrapper-for-my-button-and-hello container">
-          <h1 data-aos="fade-up" data-aos-delay="150" class="my-hello">
+          <h1 data-aos="fade-up" data-aos-delay="100" class="my-hello">
             <span>H</span><span>e</span><span>l</span><span>l</span
-            ><span>o</span> <span>i</span><span>m</span>
-            <span><a href="#portfolio-container">I</a></span
+            ><span>o</span> <span>i</span><span>m</span> <span>I</span
             ><span>g</span><span>n</span><span>a</span><span>c</span
-            ><span>i</span><span>o</span>
-
+            ><span>i</span><span>o</span> <br />
             <span>F</span><span>r</span><span>o</span><span>n</span
             ><span>t</span><span>e</span><span>n</span><span>d</span>
-            <span>w</span><span>e</span><span>b</span> <span>D</span
+            <span>W</span><span>e</span><span>b</span> <span>D</span
             ><span>e</span><span>v</span><span>e</span><span>l</span
             ><span>o</span><span>p</span><span>e</span><span>r</span>
           </h1>
