--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/Ecommerce-website/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
@@ -105,6 +106,7 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/netflix-clone/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
@@ -125,13 +127,14 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/covid-search/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
             ></span>
             <h1 class="name-for-project">Covid summary</h1>
             <h3 class="description-for-the-project">
-              Description fhhhjh jh hjh jhj h
+              Get any locations covid summary
             </h3>
           </span>
         </div>
@@ -142,6 +145,7 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/crypto-tracker/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
@@ -162,6 +166,7 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/weather-app/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
@@ -182,6 +187,7 @@
           <span class="wrapper-for-descriptions-and-links">
             <span
               ><a
+                target="_blank"
                 class="links-for-all-projects-just-styles"
                 href="https://nacho185.github.io/clone-faketube/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
