--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               ><a
                 target="_blank"
                 class="links-for-all-projects-just-styles"
-                href="https://nacho185.github.io/weather-app/"
+                href="https://nacho185.github.io/weather-app-v2/"
                 ><i class="fa fa-link" aria-hidden="true"></i></a
             ></span>
             <h1 class="name-for-project">Weather</h1>
