--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <title>portfolio</title>
   </head>
   <body>
+    <!--progress bar-->
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
     <!--navbar and front carousel-->
 
     <div id="this-navbar" class="container flex navbar">
@@ -164,7 +167,7 @@
     <!--end contact form-->
     <div
       id="contact"
-      data-aos="fade-up"
+      data-aos="fade-in"
       data-aos-delay="100"
       class="container-contact"
     >
