--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             ><span>o</span><span>p</span><span>e</span><span>r</span>
           </h1>
 
-          <a class="resume-button" href="resume.html">Resume</a>
+          <a class="resume-button" href="https://nacho185.github.io/Resume/">Resume</a>
         </div>
       </div>
     </div>
