--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
 
           <li>
-            <a href="#link-for-projects">Portfolio</a>
+            <a href="#portfolio-link">Portfolio</a>
           </li>
 
           <li>
@@ -62,106 +62,113 @@
             ><span>o</span><span>p</span><span>e</span><span>r</span>
           </h1>
 
-          <a class="resume-button" href="https://nacho185.github.io/Resume/">Resume</a>
+          <a class="resume-button" href="https://nacho185.github.io/Resume/"
+            >Resume</a
+          >
         </div>
       </div>
     </div>
 
     <!--end navbar and front carousel-->
     <!--projects-->
-
-    <div id="link-for-projects" class="big-container-projects">
-      <div class="projects-header">
+    <section id="portfolio-link" class="wrapper-for-all-projects">
+      <div class="portfolio-intro">
         <h1>Portfolio</h1>
-        <h4>Any advice? text them at ( 346-212-8318 )</h4>
       </div>
-
-      <div class="container projects-wrapper">
-        <!--single project-->
-
-        <div
-          data-aos="fade-right"
-          data-aos-delay="200"
-          class="single-project-1 before-hover-effect"
-        >
-          <span class="wrapper-for-descriptions-and-links">
-            <span
-              ><a
-                target="_blank"
-                class="links-for-all-projects-just-styles"
-                href="https://nacho185.github.io/Ecommerce-website/"
-                ><i class="fa fa-link" aria-hidden="true"></i></a
-            ></span>
-            <h1 class="name-for-project">Ecommerce | Website</h1>
-            <h3 class="description-for-the-project">
-              Front end of an ecommerce website
-            </h3>
-          </span>
+      <div class="project-container">
+        <div class="project-card card-1">
+          <div class="card-content">
+            <h2 class="card-title">Ecommerce website</h2>
+            <br />
+            <p class="card-body">FrontEnd of an ecommerce website.</p>
+            <br /><br />
+            <a
+              href="https://nacho185.github.io/Ecommerce-website/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
         </div>
 
-        <!--end single project-->
-        <!--single project-->
-        <div
-          data-aos="fade-left"
-          data-aos-delay="200"
-          class="single-project-2 before-hover-effect"
-        >
-          <span class="wrapper-for-descriptions-and-links">
-            <span
-              ><a
-                target="_blank"
-                class="links-for-all-projects-just-styles"
-                href="https://nacho185.github.io/netflix-clone/"
-                ><i class="fa fa-link" aria-hidden="true"></i></a
-            ></span>
-            <h1 class="name-for-project">Netflix Clone</h1>
-            <h3 class="description-for-the-project">
-              made with React | and TMDB Api
-            </h3>
-          </span>
+        <div class="project-card card-2">
+          <div class="card-content">
+            <h2 class="card-title">Weather-app</h2>
+            <br />
+            <p class="card-body">Weather App made with openweather api</p>
+            <br />
+            <a
+              href="https://nacho185.github.io/weather-app-v2/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
         </div>
-        <!--end single project-->
-        <!--single project-->
-        <div
-          data-aos="fade-right"
-          data-aos-delay="200"
-          class="single-project-3 before-hover-effect"
-        >
-          <span class="wrapper-for-descriptions-and-links">
-            <span
-              ><a
-                target="_blank"
-                class="links-for-all-projects-just-styles"
-                href="https://nacho185.github.io/covid-search/"
-                ><i class="fa fa-link" aria-hidden="true"></i></a
-            ></span>
-            <h1 class="name-for-project">Covid summary</h1>
-            <h3 class="description-for-the-project">
-              Get any locations covid summary
-            </h3>
-          </span>
-        </div>
-        <!--end single project-->
-        <!--single project-->
 
-        <div data-aos="fade-in" class="single-project-4 before-hover-effect">
-          <span class="wrapper-for-descriptions-and-links">
-            <span
-              ><a
-                target="_blank"
-                class="links-for-all-projects-just-styles"
-                href="https://nacho185.github.io/crypto-tracker/"
-                ><i class="fa fa-link" aria-hidden="true"></i></a
-            ></span>
-            <h1 class="name-for-project">Crypto Tracker</h1>
-            <h3 class="description-for-the-project">
-              Search how well a crypto is doing
-            </h3>
-          </span>
+        <div class="project-card card-3">
+          <div class="card-content">
+            <h2 class="card-title">Netflix clone</h2>
+            <br />
+            <p class="card-body">Netflix clone made with react and TMDb api</p>
+            <br />
+            <a
+              href="https://nacho185.github.io/netflix-clone/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
         </div>
-        <!--end single project-->
+
+        <div class="project-card card-4">
+          <div class="card-content">
+            <h2 class="card-title">Covid search</h2>
+            <p class="card-body">
+              <br />
+              Search a covid summary | made with covid api
+            </p>
+            <br />
+            <a
+              href="https://nacho185.github.io/covid-search/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
+        </div>
+
+        <div class="project-card card-5">
+          <div class="card-content">
+            <h2 class="card-title">crypto-tracker</h2>
+            <br />
+            <p class="card-body">
+              Search any crypto's current value <br />| made with react and
+              coinGecko api
+            </p>
+            <br />
+            <a
+              href="https://nacho185.github.io/crypto-tracker/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
+        </div>
+
+        <div class="project-card card-6">
+          <div class="card-content">
+            <h2 class="card-title">youtube clone</h2>
+            <br />
+            <p class="card-body">
+              FrontEnd clone of the well known website youtube
+            </p>
+            <br />
+            <a
+              href="https://nacho185.github.io/clone-faketube/"
+              class="button-portfolio"
+              >Live Code</a
+            >
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+
     <!--end projects-->
 
     <!--end contact form-->
