Added a loading screen
I added a loading screen before page loads!

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
     <title>portfolio</title>
   </head>
   <body>
+    <!--start loader-->
+    <div class="loader-page-wrapper">
+      <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <!--end start loader-->
     <!--progress bar-->
     <div id="progressbar"></div>
     <div id="scrollPath"></div>
@@ -239,7 +248,11 @@
     <script>
       AOS.init();
     </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </body>
 </html>
