--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <span></span>
       </div>
     </div>
+
     <!--end start loader-->
     <!--progress bar-->
     <div id="progressbar"></div>
@@ -37,7 +38,7 @@
     <!--navbar and front carousel-->
 
     <div id="this-navbar" class="container flex navbar">
-      <h1 class="branding">Ignacio</h1>
+      <h1 class="branding">Ignacio Aguirre</h1>
       <nav>
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
           <li>
@@ -55,28 +56,29 @@
       </nav>
       <i id="button-for-all-devices" class="fas fa-bars media-bars"></i>
     </div>
+    <section class="animation-area">
+      <ul class="box-area">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
 
-    <div class="header-container">
-      <div class="introduction-to-my-page">
-        <div class="wrapper-for-my-button-and-hello container">
-          <h1 data-aos="fade-up" data-aos-delay="100" class="my-hello">
-            <span>H</span><span>e</span><span>l</span><span>l</span
-            ><span>o</span> <span>i</span><span>m</span> <span>I</span
-            ><span>g</span><span>n</span><span>a</span><span>c</span
-            ><span>i</span><span>o</span> <br />
-            <span>F</span><span>r</span><span>o</span><span>n</span
-            ><span>t</span><span>e</span><span>n</span><span>d</span>
-            <span>W</span><span>e</span><span>b</span> <span>D</span
-            ><span>e</span><span>v</span><span>e</span><span>l</span
-            ><span>o</span><span>p</span><span>e</span><span>r</span>
-          </h1>
-
-          <a class="resume-button" href="https://nacho185.github.io/Resume/"
-            >Resume</a
-          >
-        </div>
+      <div class="animation-area-text">
+        <h1
+          id="my-helo-spans"
+          data-aos="fade-up"
+          data-aos-delay="100"
+          class="my-hello"
+        >
+          I love creative problem solving, building ambitious websites and
+          learning new technologies
+        </h1>
+        <a href="" class="resume">Resume</a>
       </div>
-    </div>
+    </section>
 
     <!--end navbar and front carousel-->
     <!--projects-->
