--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;,900;1,300;1,400;1,500;1,600;&display=swap"
       rel="stylesheet"
@@ -19,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>portfolio</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <!--start loader-->
@@ -38,8 +43,17 @@
     <!--navbar and front carousel-->
 
     <div id="this-navbar" class="container flex navbar">
-      <h1 class="branding">Ignacio Aguirre</h1>
-      <nav>
+      <div class="branding-container">
+        <h1 class="branding">Ignacio Aguirre</h1>
+        <p class="branding-description">Front-End Developer</p>
+      </div>
+
+      <nav class="nav-tag-nav-bar">
+        <div class="media-links">
+          <a target="_blank" href="https://github.com/nacho185">
+            <i class="fab fa-github"></i
+          ></a>
+        </div>
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
           <li>
             <a href="./index.html">Home</a>
@@ -76,7 +90,12 @@
           I love creative problem solving, building ambitious websites and
           learning new technologies
         </h1>
-        <a href="" class="resume">Resume</a>
+        <a
+          target="_blank"
+          href="https://nacho185.github.io/Resume/"
+          class="resume"
+          >Resume</a
+        >
       </div>
     </section>
 
@@ -94,6 +113,7 @@
             <p class="card-body">FrontEnd of an ecommerce website.</p>
             <br /><br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/Ecommerce-website/"
               class="button-portfolio"
               >Live Code</a
@@ -108,6 +128,7 @@
             <p class="card-body">Weather App made with openweather api</p>
             <br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/weather-app-v2/"
               class="button-portfolio"
               >Live Code</a
@@ -122,6 +143,7 @@
             <p class="card-body">Netflix clone made with react and TMDb api</p>
             <br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/netflix-clone/"
               class="button-portfolio"
               >Live Code</a
@@ -138,6 +160,7 @@
             </p>
             <br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/covid-search/"
               class="button-portfolio"
               >Live Code</a
@@ -155,6 +178,7 @@
             </p>
             <br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/crypto-tracker/"
               class="button-portfolio"
               >Live Code</a
@@ -171,6 +195,7 @@
             </p>
             <br />
             <a
+              target="_blank"
               href="https://nacho185.github.io/clone-faketube/"
               class="button-portfolio"
               >Live Code</a
