--- a/index.html
+++ b/index.html
@@ -70,32 +70,39 @@
       </nav>
       <i id="button-for-all-devices" class="fas fa-bars media-bars"></i>
     </div>
-    <section class="animation-area">
-      <ul class="box-area">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
 
+    <section class="animation-area">
       <div class="animation-area-text">
         <h1
           id="my-helo-spans"
           data-aos="fade-up"
-          data-aos-delay="100"
+          data-aos-offset="200"
+          data-aos-delay="50"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
           class="my-hello"
         >
           I love creative problem solving, building ambitious websites and
           learning new technologies
         </h1>
+
         <a
           target="_blank"
           href="https://nacho185.github.io/Resume/"
           class="resume"
           >Resume</a
         >
+      </div>
+      <div>
+        <ul class="box-area">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </section>
 
@@ -106,7 +113,15 @@
         <h1>Portfolio</h1>
       </div>
       <div class="project-container">
-        <div class="project-card card-1">
+        <div
+          data-aos="fade-right"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-1"
+        >
           <div class="card-content">
             <h2 class="card-title">Ecommerce website</h2>
             <br />
@@ -121,7 +136,15 @@
           </div>
         </div>
 
-        <div class="project-card card-2">
+        <div
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-2"
+        >
           <div class="card-content">
             <h2 class="card-title">Weather-app</h2>
             <br />
@@ -136,7 +159,15 @@
           </div>
         </div>
 
-        <div class="project-card card-3">
+        <div
+          data-aos="fade-left"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-3"
+        >
           <div class="card-content">
             <h2 class="card-title">Netflix clone</h2>
             <br />
@@ -151,7 +182,15 @@
           </div>
         </div>
 
-        <div class="project-card card-4">
+        <div
+          data-aos="fade-right"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-4"
+        >
           <div class="card-content">
             <h2 class="card-title">Covid search</h2>
             <p class="card-body">
@@ -168,7 +207,15 @@
           </div>
         </div>
 
-        <div class="project-card card-5">
+        <div
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-5"
+        >
           <div class="card-content">
             <h2 class="card-title">crypto-tracker</h2>
             <br />
@@ -186,7 +233,15 @@
           </div>
         </div>
 
-        <div class="project-card card-6">
+        <div
+          data-aos="fade-left"
+          data-aos-offset="200"
+          data-aos-delay="150"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
+          class="project-card card-6"
+        >
           <div class="card-content">
             <h2 class="card-title">youtube clone</h2>
             <br />
@@ -210,9 +265,12 @@
     <!--end contact form-->
     <div
       id="contact"
-      data-aos="fade-in"
-      data-aos-delay="100"
       class="container-contact"
+      data-aos="fade-in"
+      data-aos-offset="200"
+      data-aos-delay="100"
+      data-aos-duration="500"
+      data-aos-easing="ease-in-out"
     >
       <h1 class="contact-branding"><span>Ignacio</span> web | design</h1>
       <div class="contact-container-for-portfolio">
