📝📝tweaked resume button
made resume button fade-in and out on scroll

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </h1>
 
         <a
+          data-aos="fade-up"
+          data-aos-offset="200"
+          data-aos-delay="50"
+          data-aos-duration="500"
+          data-aos-easing="ease-in-out"
+          data-aos-mirror="true"
           target="_blank"
           href="https://nacho185.github.io/Resume/"
           class="resume"
@@ -108,6 +114,7 @@
 
     <!--end navbar and front carousel-->
     <!--projects-->
+
     <section id="portfolio-link" class="wrapper-for-all-projects">
       <div class="portfolio-intro">
         <h1>Portfolio</h1>
