📚📚changed font and added image
changed font to roboto and added project image

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;,900;1,300;1,400;1,500;1,600;&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
     />
     <link
@@ -74,7 +75,7 @@
     <section class="animation-area">
       <div class="animation-area-text">
         <h1
-          id="my-helo-spans"
+          id="my-hello-spans"
           data-aos="fade-up"
           data-aos-offset="200"
           data-aos-delay="50"
@@ -250,15 +251,13 @@
           class="project-card card-6"
         >
           <div class="card-content">
-            <h2 class="card-title">youtube clone</h2>
+            <h2 class="card-title">Google clone</h2>
             <br />
-            <p class="card-body">
-              FrontEnd clone of the well known website youtube
-            </p>
-            <br />
+            <p class="card-body">Google clone with their search api</p>
+            <br /><br />
             <a
               target="_blank"
-              href="https://nacho185.github.io/clone-faketube/"
+              href="https://nacho185.github.io/Google-clone/"
               class="button-portfolio"
               >Live Code</a
             >
@@ -270,7 +269,7 @@
     <!--end projects-->
 
     <!--end contact form-->
-    <div
+    <section
       id="contact"
       class="container-contact"
       data-aos="fade-in"
@@ -324,7 +323,7 @@
           </form>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer class="footer">
       <small
