⌛⌛ changed loading screen
changed loading screen to a better loading color

--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
   </head>
   <body>
     <!--start loader-->
-    <div class="loader-page-wrapper">
-      <div class="loader">
-        <span></span>
-        <span></span>
-        <span></span>
+    <section class="loader-container">
+      <div class="loader loader-5">
+        <div class="loader-pacman"></div>
       </div>
-    </div>
+    </section>
 
     <!--end start loader-->
     <!--progress bar-->
