🛠️🛠️Added skills section
Finished skills section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,22 @@
     </section>
 
     <!--end navbar and front carousel-->
-   
+   <!--skills-->
+   <section class="skills-wrapper">
+     <div class="skills-header"><h2 >Skills</h2></div>
+     
+     <div class="container">
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-css3-alt"></i>
+        <i class="fab fa-sass"></i>
+        <i class="fab fa-js"></i>
+        <i class="fab fa-git-square"></i>
+        <i class="fab fa-react"></i>
+        <h1 style="font-size: 1.8rem; color: rgb(19, 97, 241);">Jquery</h1>
+        
+     </div>
+   </section>
+   <!--end skills-->
     <!--projects-->
 
     <section id="portfolio-link" class="wrapper-for-all-projects">
