🎨🎨🎨changed navbar, and links
Changed navbar color on scroll and added link smooth transitions so its no to snappy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="scrollPath"></div>
     <!--navbar and front carousel-->
 
-    <div id="this-navbar" class="container flex navbar">
+    <div id="this-navbar" class="container flex navbar navbar-fixed-top">
       <div class="branding-container">
         <h1 class="branding">Ignacio Aguirre</h1>
         <p class="branding-description">Front-End Developer</p>
@@ -56,6 +56,10 @@
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
           <li>
             <a href="./index.html">Home</a>
+          </li>
+
+          <li>
+            <a href="#skills">Skills</a>
           </li>
 
           <li>
@@ -113,7 +117,7 @@
 
     <!--end navbar and front carousel-->
    <!--skills-->
-   <section class="skills-wrapper">
+   <section id="skills" class="skills-wrapper">
      <div class="skills-header"><h2 >Skills</h2></div>
      
      <div class="container">
