--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
     <!--end projects-->
 <!--contact section-->
-<section class="contact-wrapper">
+<section id="contact" class="contact-wrapper">
   <div class="contact-header"><h1>Feel free to contact me</h1></div>
   <div class="container">
     <div class="contact-01">
