📝📝Added target blank to links
2 links in contact didnt have _black as target

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       </a>
     </div>
     <div class="contact-02">
-      <a href="https://github.com/nacho185"><h1><i style="color: black; font-size:5rem;" class="fab fa-github"></i></h1></a>
+      <a target="_blank" href="https://github.com/nacho185"><h1><i style="color: black; font-size:5rem;" class="fab fa-github"></i></h1></a>
     </div>
   </div>
 </section>
