🖌️🖌️changed color and image
changed link color and background image for a project

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <section id="portfolio-link" class="wrapper-for-all-projects">
       <div class="portfolio-intro">
-        <h1>Portfolio</h1>
+        <h1>Projects</h1>
       </div>
       <div class="project-container">
         <div
