🔵🔵added better loader
added a loading screen that matches back color

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
   <body>
     <!--start loader-->
     <section class="loader-container">
-      <div class="loader loader-5">
-        <div class="loader-pacman"></div>
-      </div>
+      <div class="loader"></div>
     </section>
 
     <!--end start loader-->
