--- a/index.html
+++ b/index.html
@@ -347,6 +347,11 @@
     <div class="contact-02">
       <a target="_blank" href="https://github.com/nacho185"><h1><i style="color: black; font-size:5rem;" class="fab fa-github"></i></h1></a>
     </div>
+    <div class="contact-03">
+      <a href="tel:346-212-8318">
+        <i class="fas fa-phone-square"></i>
+      </a>
+    </div>
   </div>
 </section>
 <!--end contact section-->
