--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
   <div class="container">
     <div class="contact-01">
       <a href="mailto:ignacio13542@gmail.com">
-        <img src="./assets/img/gmaill.png" alt="">
+        <i class="fas fa-envelope"></i>
       </a>
     </div>
     <div class="contact-02">
-      <a target="_blank" href="https://github.com/nacho185"><h1><i style="color: black; font-size:5rem;" class="fab fa-github"></i></h1></a>
+      <a  target="_blank" href="https://github.com/nacho185"><h1><i style="font-size: 4.5rem; color: #f8f8f8;" class="fab fa-github"></i></h1></a>
     </div>
     <div class="contact-03">
       <a href="tel:346-212-8318">
