📦📦changed image format
made image format to jpg for faster performance

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <i class="fab fa-git-square"></i>
         <i class="fab fa-react"></i>
         <div class="skills-no-icon">
-          <img src="./assets/img/jquery.png" alt="">
+          <img src="./assets/img/jquery.jpg" alt="">
         </div>
         
      </div>
