--- a/index.html
+++ b/index.html
@@ -309,22 +309,23 @@
           class="project-card card-1"
         >
           <div class="card-content">
-            <h2 class="card-title">Ecommerce website</h2>
+            <h2 class="card-title">Email Validation</h2>
             <br />
             <p class="card-body">
-              Simple FrontEnd of an ecommerce website
+              Measure an emails deliverability ,and  quality
               <br>
               <br />
               <div class="technologies-used">
                 <i class="fab fa-html5"></i>
                 <i class="fab fa-css3-alt"></i>
-                <i class="fab fa-js"></i>
+                <i class="fab fa-js"></i> 
+                <i class="fab fa-sass"></i>
               </div>
             </p>
             <br />
             <a
               target="_blank"
-              href="https://nacho185.github.io/Ecommerce-website/"
+              href="https://nacho185.github.io/Email-Validation/"
               class="button-portfolio"
               >Live Code</a
             >
