🖌️🖌️Changed navbar appearance
Added an active state and changed from background color orange on hover to just border bottom and color orange.

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 
       
 
-      <nav class="nav-tag-nav-bar">
+      <nav id="navContent" class="nav-tag-nav-bar">
         <div class="media-links">
-          <a target="_blank" href="https://github.com/nacho185">
+          <a  href="https://github.com/nacho185">
             <i class="fab fa-github"></i
           ></a>
         </div>
         
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
           <li>
-            <a href="./index.html">Home</a>
+            <a href="#animationWrapper">Home</a>
           </li>
 
           <li>
@@ -75,7 +75,7 @@
       <i id="button-for-all-devices" class="fas fa-bars media-bars"></i>
     </div>
 
-    <section class="animation-area">
+    <section id="animationWrapper" class="animation-area">
       <div class="animation-area-text">
         <h1
           id="my-hello-spans"
