🧰🧰fixed active class on navbar
made it so home has active class as soon as you enter site and deletes once another link gets chosen.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <ul class="just-for-button-onclick-class" id="just-for-button-onclick">
           <li>
-            <a href="#animationWrapper">Home</a>
+            <a href="#animationWrapper" class="activeLinkClass">Home</a>
           </li>
 
           <li>
