Said that search api is broken
Need to replace broken sign after API is fixed i might have to switch to another API.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <p class="card-body">
               <br />
               Search a covid summary | made with covid api
-              <br>
+              <span style="color: red;">{search is currently broken will fix asap}</span>
               <br>
               <div class="technologies-used">
                 <i class="fab fa-html5"></i>
