🔨🔨took off website and made coming soon poster
got slot ready for a website im developing with wordpress.

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
           class="project-card card-4"
         >
           <div class="card-content">
-            <h2 class="card-title">Covid search</h2>
+            <h2 class="card-title">Coming soon</h2>
             <p class="card-body">
               <br />
-              Search a covid summary | made with covid api
-              <span style="color: red;">{search is currently broken will fix asap}</span>
+              <br> Wordpress
+              <br>
               <br>
               <div class="technologies-used">
                 <i class="fab fa-html5"></i>
@@ -229,8 +229,8 @@
             
             <br />
             <a
-              target="_blank"
-              href="https://nacho185.github.io/covid-search/"
+              target=""
+              href=""
               class="button-portfolio"
               >Live Code</a
             >
