👁️‍🗨️👁️‍🗨️fixed dizzy animation
fixed animation on projects to animate to same direction and not make user dizzy.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
         </div>
         <div
-          data-aos="fade-in"
+          data-aos="fade-left"
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -239,7 +239,7 @@
           </div>
         </div>
         <div
-          data-aos="fade-in"
+          data-aos="fade-right"
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
