📽️Added a project link
I added a link to my new website made in wordpress.

--- a/index.html
+++ b/index.html
@@ -311,14 +311,11 @@
           class="project-card card-4"
         >
           <div class="card-content">
-            <h2 class="card-title">Coming soon</h2>
+            <h2 class="card-title">EcoStrip 9380</h2>
             <p class="card-body">
-              <br />
-              <br> Wordpress
-              <br>
-              <br>
+              Here is a wordpress website explaining how to use my favorite machine so far in my career as a machine operator using wordpress as my editor.
               <div class="technologies-used">
-                <i class="fab fa-html5"></i>
+                <i class="fab fa-html5"></i> 
                 <i class="fab fa-css3-alt"></i>
                 <i class="fab fa-js"></i>
               </div>
@@ -326,8 +323,8 @@
             
             <br />
             <a
-              target=""
-              href=""
+              target="_blank"
+              href="https://ignacioaguirre.net/"
               class="button-portfolio"
               >Live Code</a
             >
