--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
      <div class="skills-header"><h2 >Skills</h2></div>
      
      <div class="container">
+      <div class="skills-no-icon no-icon-02">
+        <img src="./assets/img/wordpressIcon-forwebsite.png" alt="">
+      </div>
         <i class="fab fa-html5"></i>
         <i class="fab fa-css3-alt"></i>
         <i class="fab fa-sass"></i>
