--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       </div>
       <div class="project-container">
         <div
-          data-aos="fade-left"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -177,7 +177,7 @@
         </div>
         </div>
         <div
-          data-aos="fade-left"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -209,7 +209,7 @@
         </div>
         
         <div
-          data-aos="fade-left"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -242,7 +242,7 @@
           </div>
         </div>
         <div
-          data-aos="fade-right"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -278,7 +278,7 @@
           </div>
         </div>
         <div
-          data-aos="fade-right"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
@@ -315,7 +315,7 @@
         </div>
 
         <div
-          data-aos="fade-right"
+          data-aos=""
           data-aos-offset="200"
           data-aos-delay="150"
           data-aos-duration="500"
