changed sizin fof fonts and fonts
changed fonts and made evrything roboto font and changed sies and font weigth so everythingmatches better

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="this-navbar" class="container flex navbar navbar-fixed-top">
       <div class="branding-container">
         <h1 class="branding">Ignacio Aguirre</h1>
-        <p class="branding-description">Front-End Developer</p>
+        <p class="branding-description">Software Developer</p>
       </div>
 
       
@@ -87,8 +87,7 @@
           data-aos-mirror="true"
           class="my-hello"
         >
-          I love creative problem solving, building ambitious websites and
-          learning new technologies
+          I build clean, practical web applications with modern JavaScript and Python.
         </h1>
 
         <a
