removes images and rearranged dprojects
made projects more neat and am rearanginf everything and cleanin up ui.

--- a/index.html
+++ b/index.html
@@ -133,16 +133,15 @@
           class="project-card card-3"
         >
         <div class="card-content">
-          <h2 class="card-title">Netflix clone</h2>
+          <h2 class="card-title">WeatherNow</h2>
           <br />
-          <p class="card-body">Netflix clone made with react and TMDb api 
+          <p class="card-body"> Enter a location to get the current temperature, wind speed, and weather.Check weather for multiple locations easily!
             <br>
             <br>
             <div class="technologies-used">
               <i class="fab fa-html5"></i>
               <i class="fab fa-css3-alt"></i>
               <i class="fab fa-js"></i>
-              <i class="fab fa-react"></i>
             </div>
           </p>
           <br />
@@ -164,9 +163,9 @@
           class="project-card card-6"
         >
           <div class="card-content">
-            <h2 class="card-title">Google clone</h2>
+            <h2 class="card-title">CSV Cleaner</h2>
             <br />
-            <p class="card-body">Google clone with their search api 
+            <p class="card-body">Upload a file, and the tool will remove duplicates, fix text formatting, and fill missing values, providing you with a cleaned version ready for use. 
               <br>
               <br>
               <div class="technologies-used">
@@ -179,7 +178,7 @@
             <br /> <br/>
             <a
               target="_blank"
-              href="https://nacho185.github.io/Google-clone/"
+              href="https://data-cleaner-5qdn.onrender.com/"
               class="button-portfolio"
               >Live Code</a
             >
